--- a/hyperspace/html_templates/wip_template.html
+++ b/hyperspace/html_templates/wip_template.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="MakUrSpace Bounty Submission Form">
+  <meta name="description" content="MakUrSpace WIP Submission">
   <meta name="author" content="MakUrSpace, LLC">
   <title>MakUrSpace WIP Submission</title>
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
