Adding WIP submission form

--- a/hyperspace/html_templates/wip_submission_template.html
+++ b/hyperspace/html_templates/wip_submission_template.html
@@ -53,7 +53,7 @@
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit Bounty</button>
+          <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit WIP Report</button>
         </form>
       </div>
 
