Fix reference material upload. Remove committed __pycache__ dir

--- a/frontend/bounty.html
+++ b/frontend/bounty.html
@@ -75,6 +75,11 @@
               <input type="hidden" class="form-control" id="ReferenceMaterialNames" name="ReferenceMaterialNames" value='[]'>
             </div>
           </div>
+          <div class="control-group form-group">
+            <div class="controls">
+              <input type="hidden" class="form-control" id="BountyId" name="BountyId" value='foobar'>
+            </div>
+          </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit Bounty</button>
