Update wip email template

--- a/hyperspace/html_templates/wip_submission_template.html
+++ b/hyperspace/html_templates/wip_submission_template.html
@@ -22,6 +22,8 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
         <h1 class="mt-4 mb-3">Submit a WIP Report</h1>
+
+        A confirmation email will be sent to the maker's email attached to this project.
       </li>
     </ol>
     <div class="row">
