--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -22,6 +22,12 @@
           <a class="nav-link" href="/bounty.html" target="_top">Submit a Bounty</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/bounties_in_progress.html" target="_top">Works in Progress</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/bounty_portfolio.html" target="_top">Portfolio</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/maker_registration.html" target="_top">Become a Maker</a>
         </li>
       </ul>
