--- a/hyperspace/html_templates/claim_bounty_template.html
+++ b/hyperspace/html_templates/claim_bounty_template.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="MakUrSpace WIP Submission">
+  <meta name="description" content="MakUrSpace Claim Bounty">
   <meta name="author" content="MakUrSpace, LLC">
   <title>MakUrSpace WIP Submission</title>
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <div class="container" style="margin-top: 50px; margin-bottom: 30px">
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <h1 class="mt-4 mb-3">Submit a WIP Report</h1>
+        <h1 class="mt-4 mb-3">Claim {bounty_name} Bounty</h1>
       </li>
     </ol>
     <div class="row">
@@ -32,18 +32,11 @@
             <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
           </div>
         </form>
-        <form name="sentMessage" id="bounty_wip" novalidate enctype="multipart/form-data" method="post" action="/rest/bounty_wip" enctype="multipart/form-data">
-          <div class="control-group form-group input-group">
-            <div class="controls">
-              <label>Percentage Done:</label>
-              <input type="number" min="1" max="100" class="form-control" id="PercentageDone" name="PercentageDone" required data-validation-required-message="Please percentage of the project completed">
-              <p class="help-block"></p>
-            </div>
-          </div>
+        <form name="sentMessage" id="claim_bounty" novalidate enctype="multipart/form-data" method="post" action="/rest/claim_bounty" enctype="multipart/form-data">
           <div class="control-group form-group">
             <div class="controls">
-              <label>Work completed:</label>
-              <textarea rows="10" cols="100" class="form-control" id="WorkCompleted" name="WorkCompleted" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none"></textarea>
+              <label>Completion Notes:</label>
+              <textarea rows="10" cols="100" class="form-control" id="CompletionNotes" name="CompletionNotes" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none"></textarea>
             </div>
           </div>
           <div class="control-group form-group">
@@ -63,7 +56,7 @@
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit WIP Report</button>
+          <button type="submit" class="btn btn-primary" id="sendMessageButton">Claim Bounty</button>
         </form>
       </div>
 
