--- a/frontend/about.html
+++ b/frontend/about.html
@@ -49,11 +49,21 @@
             <h6 class="card-subtitle mb-2 text-muted">Director</h6>
 	    <p class="card-text"></p>
           </div>
-          <div class="card-footer">
-            <a href="#">lutherblackwood@makurspace.com</a>
+            <a href="#">https://www.linkedin.com/in/luther-blackwood-b3299337/</a>
           </div>
         </div>
       </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100 text-center">
+          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Briana Banks</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Marketing and Outreach</h6>
+            <p class="card-text"></p>
+          </div>
+        </div>
+      </div>
+
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
