Create local development solution

--- a/hyperspace/html_templates/bountycard.html
+++ b/hyperspace/html_templates/bountycard.html
@@ -25,6 +25,34 @@
     <div class="row" style="margin-bottom: 30px">
       <div class="col-md-8">
         <img class="img-fluid" src="{primary_image}" alt="{bounty_name} reference image">
+<!--         <div class="container">
+          <div class="carousel slide" data-ride="carousel" id="multi_item">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="1 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="2 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="3 slide"></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="4 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="5 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="6 slide"></div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#multi_item" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#multi_item" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div> -->
       </div>
 
       <div class="col-md-4">
