--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,15 +27,11 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active" style="background-image: url('MakUrSpace_Logo.png')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>Welcome to MakUrSpace</h3>
-                <p>Create Your World</p>
-              </div>
-            </div>
-            <div class="carousel-item" style="background-image: url('1.jpg">
+            <div class="carousel-item active" style="background-image: url('MUSBBDirective.png')"></div>
+            <div class="carousel-item" style="background-image: url('1.jpg')">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Beholder Set</h3>
                 <p>It gets shot in the head, but rises again</p>
@@ -44,6 +40,12 @@
             <div class="carousel-item" style="background-image: url('2.jpg')">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Young Silver Dragon</h3>
+              </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('MakUrSpace_Logo.png')">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Welcome to MakUrSpace</h3>
+                <p>Create Your World</p>
               </div>
             </div>
           </div>
