--- a/frontend/about.html
+++ b/frontend/about.html
@@ -41,7 +41,7 @@
     <h2>Our Team</h2>
 
     <div class="row">
-      <div class="col-lg-4 mb-4">
+      <div class="col-lg-6 mb-4">
         <div class="card h-100 text-center">
           <div class="card-body">
             <h4 class="card-title">Briana Banks</h4>
@@ -50,14 +50,15 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 mb-4">
+      <div class="col-lg-6 mb-4">
         <div class="card h-100 text-center">
           <div class="card-body">
             <h4 class="card-title">Luther Blackwood</h4>
             <h6 class="card-subtitle mb-2 text-muted">Director</h6>
+          </div>
         </div>
       </div>
-      <div class="col-lg-4 mb-4">
+      <div class="col-lg-6 mb-4">
         <div class="card h-100 text-center">
           <div class="card-body">
             <h4 class="card-title">Brandon Hall</h4>
@@ -65,7 +66,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 mb-4">
+      <div class="col-lg-6 mb-4">
         <div class="card h-100 text-center">
           <div class="card-body">
             <h4 class="card-title">Shaquille Smith</h4>
