Add description text to bounty form. Update about page

--- a/frontend/bounty.html
+++ b/frontend/bounty.html
@@ -27,8 +27,11 @@
     <div class="row">
       <div class="col-lg-8 mb-4">
         <form>
-          <div class="controls">
+          <div class="controls mb-4">
             <label>Reference Material:<div id="reference_material_file_list"></div></label>
+            <small id="refMatHelp" class="form-text text-muted">
+              Upload files that can be used to complete the project, e.g. an STL file. This can include images of similar things, 3D models, or existing examples.
+            </small>
             <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
           </div>
         </form>
@@ -36,37 +39,54 @@
           <div class="control-group form-group input-group">
             <div class="controls">
               <label>Bounty Reward:</label>
+              <small id="bountyRewardHelp" class="form-text text-muted">
+                This is the monetary reward in US dollars for successfully claiming the bounty.
+              </small>
               <input type="float" class="form-control" id="Bounty" name="Bounty" required data-validation-required-message="Please enter a bounty reward amount.">
-              <p class="help-block"></p>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Name:</label>
+              <small id="bountyRewardHelp" class="form-text text-muted">
+                Provide a name for the project
+              </small>
               <input type="text" class="form-control" id="BountyName" name="BountyName" required data-validation-required-message="Please enter a unique name for the bounty">
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Benefactor:</label>
+              <small id="bountyRewardHelp" class="form-text text-muted">
+                The benefactor will be the recipient of the completed bounty's products.
+              </small>
               <input type="text" class="form-control" id="Benefactor" name="Benefactor" required data-validation-required-message="Please enter a name for the recipient of the bounty">
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Contact Benefactor at:</label>
+              <small id="bountyRewardHelp" class="form-text text-muted">
+                Provide a valid email address at which to contact the benefactor. This will be used to collect payment and complete delivery.
+              </small>
               <input type="email" class="form-control" id="Contact" name="Contact" required data-validation-required-message="Please enter an email address for the recipient of the bounty">
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Description:</label>
+              <small id="bountyRewardHelp" class="form-text text-muted">
+                Provide any description or project requirements.
+              </small>
               <textarea rows="10" cols="100" class="form-control" id="BountyDescription" name="BountyDescription" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none"></textarea>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Request Maker:</label>
+              <small id="bountyRewardHelp" class="form-text text-muted">
+                Want a specific maker in the community to complete this project? Provide their name and they'll be notified of the project.
+              </small>
               <input type="text" class="form-control">
             </div>
           </div>
