--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container" id="navbar"></div>
   <div class="container-fluid vh-100">
-    <div class="container-fluid w-50">
+    <div class="container-fluid w-100">
       <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -30,7 +30,9 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active" style="background-image: url('MUSBBDirective.png')"></div>
+            <div class="carousel-item active">
+              <img src='MUSBBDirective.png'>
+            </div>
             <div class="carousel-item" style="background-image: url('1.jpg')">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Beholder Set</h3>
