--- a/frontend/about.html
+++ b/frontend/about.html
@@ -33,12 +33,14 @@
       <div class="col-lg-6">
       	<p>MakUrSpace delivers access to technology and education that would otherwise be out of reach. Our services and products first provide access to creative resources and second encourage the utilization of those resources through a requested goods platform.</p>
       	<p>We help people make stuff.</p>
+        <h3 class="mt-4 mb-3">What is this website?</h3>
+        <p>The MakUrSpace Bounty Board is a bridge to connect consumers to makers. Consumers post a request -- a bounty, and capable makers can work to claim that bounty -- and its reward.</p>
       </div>
     </div>
     <!-- /.row -->
 
     <!-- Team Members -->
-    <h2>Our Team</h2>
+    <h2>Who are we?</h2>
 
     <div class="row">
       <div class="col-lg-6 mb-4">
