Reference Material displaying on product page

--- a/hyperspace/html_templates/bountycard.html
+++ b/hyperspace/html_templates/bountycard.html
@@ -25,21 +25,12 @@
     <div class="row" style="margin-bottom: 30px">
       <div class="col-md-8">
         <img class="img-fluid" src="{primary_image}" alt="{bounty_name} reference image">
-<!--         <div class="container">
+        <div class="container">
           <div class="carousel slide" data-ride="carousel" id="multi_item">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="row">
-                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="1 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="2 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="3 slide"></div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row">
-                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="4 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="5 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="6 slide"></div>
+                  {secondary_images}
                 </div>
               </div>
             </div>
@@ -52,7 +43,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-        </div> -->
+        </div>
       </div>
 
       <div class="col-md-4">
@@ -104,9 +95,7 @@
   </div>
 
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2021</p>
-    </div>
+      <div class="container"><p class="m-0 text-center text-white">Copyright © MakUrSpace, LLC 2021</p></div>
   </footer>
 
   <script src="/vendor/jquery/jquery.min.js"></script>
