Remove MUSBBDirective.png image from carosuel. Fix local server for frontend->static rename

--- a/static/index.html
+++ b/static/index.html
@@ -24,14 +24,16 @@
       <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3" class="active"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img src='MUSBBDirective.png'>
+            <div class="carousel-item active" style="background-image: url('MakUrSpace_Logo.png')">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Welcome to MakUrSpace</h3>
+                <p>Create Your World</p>
+              </div>
             </div>
             <div class="carousel-item" style="background-image: url('1.jpg')">
               <div class="carousel-caption d-none d-md-block">
@@ -42,12 +44,6 @@
             <div class="carousel-item" style="background-image: url('2.jpg')">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Young Silver Dragon</h3>
-              </div>
-            </div>
-            <div class="carousel-item" style="background-image: url('MakUrSpace_Logo.png')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>Welcome to MakUrSpace</h3>
-                <p>Create Your World</p>
               </div>
             </div>
           </div>
