A whole bunch of stuff

--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -32,7 +32,7 @@
             <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
           </div>
         </form>
-        <form name="sentMessage" id="bounty_form" novalidate enctype="multipart/form-data" method="post" action="/rest/edit_bounty/{bounty_id}" enctype="multipart/form-data">
+        <form name="sentMessage" id="bounty_form" novalidate enctype="multipart/form-data" method="post" action="/rest/edit_bounty/{bounty_id}">
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Reward:</label>
