--- a/static/bounty.html
+++ b/static/bounty.html
@@ -35,7 +35,7 @@
             <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
           </div>
         </form>
-        <form name="sentMessage" id="bounty_form" novalidate enctype="multipart/form-data" method="post" action="/rest/bounty_form" enctype="multipart/form-data">
+        <form name="sentMessage" id="bounty_form" novalidate enctype="multipart/form-data" method="post" action="/rest/bounty_form">
           <div class="control-group form-group input-group">
             <div class="controls">
               <label>Bounty Reward:</label>
