Refactoring work in progress to update report

--- a/hyperspace/html_templates/up_email_template.html
+++ b/hyperspace/html_templates/up_email_template.html
@@ -1,5 +1,5 @@
 <head>
-  <title>MakUrSpace WIP Request</title>
+  <title>MakUrSpace UP Request</title>
 </head>
 <body>
   <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
@@ -8,7 +8,7 @@
 
   Some time ago you committed to working on the <b>{bounty_name}</b> project. Can you provide an update on your progress?<br><br>
 
-  If so, <a href="https://www.makurspace.com/rest/bounty_wip/{bounty_id}">please click here, then submit some images and a short blurb about your progress.</a><br><br>
+  If so, <a href="https://www.makurspace.com/rest/bounty_up/{bounty_id}">please click here, then submit some images and a short blurb about your progress.</a><br><br>
 
   If instead you're read to claim this bounty, <a href="https://www.makurspace.com/rest/claim_bounty/{bounty_id}">please click here, then submit some final images and any last notes about the job.</a>. If the bounty included mailing an item, be sure to include images of the package and shipping label as well as any tracking information.<br><br>
 
