--- a/hyperspace/html_templates/up_submission_template.html
+++ b/hyperspace/html_templates/up_submission_template.html
@@ -5,9 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="MakUrSpace WIP Submission">
+  <meta name="description" content="MakUrSpace UP Submission">
   <meta name="author" content="MakUrSpace, LLC">
-  <title>MakUrSpace WIP Submission</title>
+  <title>MakUrSpace UP Submission</title>
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/modern-business.css" rel="stylesheet">
   <link href="/css/makurspace.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <div class="container" style="margin-top: 50px; margin-bottom: 30px">
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <h1 class="mt-4 mb-3">Submit a WIP Report</h1>
+        <h1 class="mt-4 mb-3">Submit a UP Report</h1>
       </li>
     </ol>
     <div class="row">
@@ -32,7 +32,7 @@
             <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
           </div>
         </form>
-        <form name="sentMessage" id="bounty_wip" novalidate enctype="multipart/form-data" method="post" action="/rest/bounty_wip" enctype="multipart/form-data">
+        <form name="sentMessage" id="bounty_up" novalidate enctype="multipart/form-data" method="post" action="/rest/bounty_up" enctype="multipart/form-data">
           <div class="control-group form-group input-group">
             <div class="controls">
               <label>Percentage Done:</label>
@@ -63,7 +63,7 @@
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit WIP Report</button>
+          <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit UP Report</button>
         </form>
       </div>
 
