--- a/hyperspace/html_templates/bounty_upped.html
+++ b/hyperspace/html_templates/bounty_upped.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>MakUrSpace Wipped Bounty</title>
+  <title>MakUrSpace Upped Bounty</title>
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/makurspace.css" rel="stylesheet">
 
