Add server error handler

--- a/hyperspace/html_templates/product_page_template.html
+++ b/hyperspace/html_templates/product_page_template.html
@@ -11,10 +11,10 @@
   <title>MakUrSpace</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/makurspace.css" rel="stylesheet">
+  <link href="/css/makurspace.css" rel="stylesheet">
 
   <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
 
@@ -246,7 +246,7 @@
             <div class="container"><p class="m-0 text-center text-white">Copyright © MakUrSpace, LLC 2021</p></div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/vendor/jquery/jquery.min.js"></script>
+        <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
