Adjust language on error page

--- a/hyperspace/html_templates/error.html
+++ b/hyperspace/html_templates/error.html
@@ -28,7 +28,7 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
-        <p>The server returned the following exception following your previous request:</p>
+        <p>The server returned the following exception in response to your last request:</p>
         <p class="text-danger">{exception}</p>
         <p>Please make any corrections to your request and try again or <a href="mailto: support@makurspace.com">contact support@makurspace.com</a></p>
       </div>
