Edit bounty flow updates

--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -54,6 +54,12 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
+              <label>Your Maker name or email:</label>
+              <input type="text" class="form-control" id="EditorContact" name="EditorContact" required data-validation-required-message="Please enter your email address" value="">
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
               <input type="hidden" class="form-control" id="ReferenceMaterialNames" name="ReferenceMaterialNames" value='[]'>
             </div>
           </div>
