--- a/hyperspace/html_templates/bounty_editor_email_template.html
+++ b/hyperspace/html_templates/bounty_editor_email_template.html
@@ -5,7 +5,7 @@
   <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   
 
-  {editor} suggested your bounty be updated to:
+  You suggested the {OldBountyName} project be updated to:
   <h3>Bounty: {BountyReward}</h3>
   <h3>Bounty Name: {BountyName}</h3>
   <h3>Benefactor: {Benefactor}</h3>
@@ -14,6 +14,5 @@
   <p>{BountyDescription}</p>
 
   <br><br>
-
-  <h2>To accept these changes, <a href="https://www.makurspace.com/rest/confirm_bounty_edit/{bounty_edit_confirmation_id}">please click here</a></h2>
+  <h2>To suggest these edits, <a href="https://www.makurspace.com/rest/submit_bounty_edits/{bounty_edit_id}?{token}">please click here</a></h2>
 </body>
