Edit flow improvements

--- a/hyperspace/html_templates/error.html
+++ b/hyperspace/html_templates/error.html
@@ -30,7 +30,7 @@
       <div class="col-lg-6">
         <p>The server returned the following exception in response to your last request:</p>
         <p class="text-danger">{exception}</p>
-        <p>Please make any corrections to your request and try again or <a href="mailto: support@makurspace.com">contact support@makurspace.com</a></p>
+        <p>If that makes any sense to you -- it sure as hell doesn't to me! -- please make any corrections to your request and try again OR <a href="mailto: support@makurspace.com">contact support@makurspace.com</a></p>
       </div>
       <div class="col-lg-6">
         <img class="img-fluid rounded mb-4" src="/MakUrSpace_Logo.png" alt="MakUrSpace Logo">
