--- a/hyperspace/html_templates/billboard.html
+++ b/hyperspace/html_templates/billboard.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>MakUrSpace Server Error</title>
+  <title>MakUrSpace</title>
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="/MakUrSpace_Logo.png" type="image/x-icon">
   <link href="/css/modern-business.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <div class="container" style="margin-top: 50px">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">SOMETHING'S GONE MODERATELY WRONG!</h1>
+    <h1 class="mt-4 mb-3">GENERAL SUCCESS!</h1>
 
     <!-- Intro Content -->
     <div class="row">
