Adjust landing carousel to take 100% width on small displays

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container" id="navbar"></div>
   <div class="container-fluid vh-100">
-    <div class="container-fluid w-50">
+    <div class="container-md">
       <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
