Implement better error messages and handling with email addresses in bounty edit flow

--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -107,6 +107,7 @@
       console.log(e)
       changed = [...new Set(changed)]
       document.getElementById('changed').value = JSON.stringify(changed)
+      return true
     }
 
     $(document).ready(function(){
