Adding bounty description to change-monitored classes in edit form

--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -49,7 +49,7 @@
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Description:</label>
-              <textarea rows="10" cols="100" class="form-control" id="BountyDescription" name="BountyDescription" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none">{bounty_description}</textarea>
+              <textarea rows="10" cols="100" class="form-control change-monitored" id="BountyDescription" name="BountyDescription" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none">{bounty_description}</textarea>
             </div>
           </div>
           <div class="control-group form-group">
