Add cronitor. Clean up WIP references

--- a/hyperspace/html_templates/bounty_claimed.html
+++ b/hyperspace/html_templates/bounty_claimed.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container" id="navbar"></div>
-  <div class="container" id="bounty_wipped" style="margin-top: 50px; margin-bottom: 30px">
+  <div class="container" id="bounty_upped" style="margin-top: 50px; margin-bottom: 30px">
     <div class="row">
       <h3>You claimed the {bounty_name} Bounty!</h3><br>
       <h4>Congratulations on finishing the bounty. Pending a final approval from the bounty's author, expect a transfer of {bounty_amount} to your account soon!</h4>
