--- a/hyperspace/html_templates/claim_bounty_template.html
+++ b/hyperspace/html_templates/claim_bounty_template.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="MakUrSpace Claim Bounty">
   <meta name="author" content="MakUrSpace, LLC">
-  <title>MakUrSpace WIP Submission</title>
+  <title>MakUrSpace Bounty Claim</title>
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/modern-business.css" rel="stylesheet">
   <link href="/css/makurspace.css" rel="stylesheet">
