Fix refMatNames field id for up and claim bounty forms

--- a/hyperspace/html_templates/claim_bounty_template.html
+++ b/hyperspace/html_templates/claim_bounty_template.html
@@ -41,12 +41,12 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <input type="hidden" class="form-control" id="ReferenceMaterialNames" name="ReferenceMaterialNames" value='[]'>
+              <input type="hidden" class="form-control" id="BountyId" name="BountyId" value='foobar'>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <input type="hidden" class="form-control" id="BountyId" name="BountyId" value='foobar'>
+              <input type="hidden" class="form-control" id="refMatNames" name="ReferenceMaterialNames" value='[]'>
             </div>
           </div>
           <div class="control-group form-group">
