--- a/hyperspace/html_templates/up_submission_template.html
+++ b/hyperspace/html_templates/up_submission_template.html
@@ -48,7 +48,7 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <input type="hidden" class="form-control" id="ReferenceMaterialNames" name="ReferenceMaterialNames" value='[]'>
+              <input type="hidden" class="form-control" id="refMatNames" name="ReferenceMaterialNames" value='[]'>
             </div>
           </div>
           <div class="control-group form-group">
