--- a/hyperspace/html_templates/claim_bounty_template.html
+++ b/hyperspace/html_templates/claim_bounty_template.html
@@ -28,7 +28,10 @@
       <div class="col-lg-8 mb-4">
         <form>
           <div class="controls">
-            <label>Reference Material:<div id="reference_material_file_list"></div></label>
+            <label>Reference Material:<div id="refMatDisplayList"></div></label>
+            <small id="refMatHelp" class="form-text text-muted">
+              Upload files that show the completed project.
+            </small>
             <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
           </div>
         </form>
