--- a/hyperspace/html_templates/bounty_claimed.html
+++ b/hyperspace/html_templates/bounty_claimed.html
@@ -11,7 +11,7 @@
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/makurspace.css" rel="stylesheet">
 
-  <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/MakUrSpace_Logo.png" type="image/x-icon">
 
 </head>
 <body>
