--- a/hyperspace/html_templates/bountycard.html
+++ b/hyperspace/html_templates/bountycard.html
@@ -17,7 +17,7 @@
 
   <div class="container" style="margin-top: 50px; margin-bottom: 30px">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item">
+      <li class="breadcrumb-item" id="bountyCardHeader">
         <h1 class="mt-4 mb-3">{bounty_name}</h1>
       </li>
     </ol>
