--- a/static/bountyboard.html
+++ b/static/bountyboard.html
@@ -19,6 +19,7 @@
   <div class="container" id="navbar"></div>
   <div class="container container-fluid vh-100" style="margin-top: 50px;margin-bottom: 60px">
     <h1 class="mt-2">MakUrSpace Bounty Board</h1>
+    <h2 class="container mt-2 text-center"><a href="/bounty.html">Post your own bounty!</h2>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard"></div>
   </div>
 
