--- a/static/index.html
+++ b/static/index.html
@@ -60,6 +60,7 @@
     </div>
 
     <h2 class="container mt-2">MakUrSpace Bounty Board</h2>
+    <h3 class="container mt-2 text-center"><a href="/bounty.html">Post your own bounty!</h3>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard" style="margin-bottom: 60px"></div>
   </div>
 
