--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -64,7 +64,7 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <input type="hidden" class="form-control change-monitored" id="refMatNames" name="ReferenceMaterialNames" value='[]'>
+              <input type="hidden" class="form-control change-monitored" id="refMatNames" name="ReferenceMaterialNames" value='{reference_material}'>
             </div>
           </div>
           <div class="control-group form-group">
