--- a/hyperspace/html_templates/up_email_template.html
+++ b/hyperspace/html_templates/up_email_template.html
@@ -10,7 +10,7 @@
 
   If so, <a href="https://www.makurspace.com/rest/bounty_up/{bounty_id}">please click here, then submit some images and a short blurb about your progress.</a><br><br>
 
-  If instead you're read to claim this bounty, <a href="https://www.makurspace.com/rest/claim_bounty/{bounty_id}">please click here, then submit some final images and any last notes about the job.</a>. If the bounty included mailing an item, be sure to include images of the package and shipping label as well as any tracking information.<br><br>
+  If instead you're ready to claim this bounty, <a href="https://www.makurspace.com/rest/claim_bounty/{bounty_id}">please click here, then submit some final images and any last notes about the job.</a>. If the bounty included mailing an item, be sure to include images of the package and shipping label as well as any tracking information.<br><br>
 
   Please note, this is not an examination! Our bounties don't have deadlines -- But they do require regular progress. If life is such that you can't or don't want to pursue this project anymore, <a href="https://www.makurspace.com/rest/relinquish_bounty/{bounty_id}">click here as soon as possible to relinquish the bounty.</a><br><br>
 
