--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -58,7 +58,7 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Your Maker name or email:</label>
+              <label>Your Maker email:</label>
               <input type="text" class="form-control" id="EditorContact" name="EditorContact" required data-validation-required-message="Please enter your email address" value="">
             </div>
           </div>
