More question/answer stuff

--- a/hyperspace/html_templates/ask_benefactor_email.html
+++ b/hyperspace/html_templates/ask_benefactor_email.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
-  {questioner} wanted to ask you something:
+  {questioner} wanted to ask you something in regards to {bounty_name}:
 
   <h3>{question_title}</h3>
   <p>{question_text}<p>
