Functional question system

--- a/hyperspace/html_templates/ask_benefactor_answer_form.html
+++ b/hyperspace/html_templates/ask_benefactor_answer_form.html
@@ -35,7 +35,7 @@
               <textarea rows="10" cols="100" class="form-control" id="QuestionAnswer" name="QuestionAnswer" required data-validation-required-message="Enter your answer to the question here" rows="5" maxlength="499" style="resize:none"></textarea>
             </div>
           </div>
-          <button type="submit" class="btn btn-primary" id="submit">Suggest Answer</button>
+          <button type="submit" class="btn btn-primary" id="submit">Submit Answer</button>
         </form>
       </div>
 
