--- a/hyperspace/html_templates/ask_benefactor_form.html
+++ b/hyperspace/html_templates/ask_benefactor_form.html
@@ -45,7 +45,7 @@
               <input type="text" class="form-control" id="Questioner" name="Questioner" required data-validation-required-message="Please enter the email address you've registered with MakUrSpace" value="">
             </div>
           </div>
-          <button type="submit" class="btn btn-primary" id="submit">Suggest Question</button>
+          <button type="submit" class="btn btn-primary" id="submit">Ask Question</button>
         </form>
       </div>
 
