--- a/hyperspace/html_templates/ask_benefactor_answer_email.html
+++ b/hyperspace/html_templates/ask_benefactor_answer_email.html
@@ -3,12 +3,16 @@
 </head>
 <body>
   <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
-  {questioner} wanted to ask you something in regards to "{bounty_name}":
+  We received the answer to your question on "{bounty_name}"!
 
   <h3>{question_title}</h3>
   <p>{question_text}<p>
 
   <br><br>
 
-  <h2>To answer this question <a href="https://www.makurspace.com/rest/question/{question_id}">please click here</a></h2>
+  <p>{question_answer}<p>
+
+  <br><br>
+
+  <h2>To view this bounty <a href="https://www.makurspace.com/rest/rendered_bounty/{bounty_id}">please click here</a></h2>
 </body>
